--- a/prizes.html
+++ b/prizes.html
@@ -553,82 +553,82 @@
                               </tr>
                               <tr>
                                 <th>300</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Rod Koplitz</td>
+                                <td>1417</td>
+                                <td>0.645</td>
+                                <td>Walleye</td>
                                 <td>Eskimo 8 inch Hand Auger + Tip Down (Green)</td>
                               </tr>
                               <tr>
                                 <th>310</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Bryan Mason</td>
+                                <td>1195</td>
+                                <td>0.630</td>
+                                <td>Walleye</td>
                                 <td>$100 Sand Bar Gift Card</td>
                               </tr>
                               <tr>
                                 <th>320</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Nic Staves</td>
+                                <td>1287</td>
+                                <td>0.616</td>
+                                <td>Crappie</td>
                                 <td>$100 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>330</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Tyler Krause</td>
+                                <td>2482</td>
+                                <td>0.605</td>
+                                <td>Crappie</td>
                                 <td>Eskimo Pistol Bit 8 inch Auger</td>
                               </tr>
                               <tr>
                                 <th>340</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Jake Johnson</td>
+                                <td>2015</td>
+                                <td>0.592</td>
+                                <td>Crappie</td>
                                 <td>$100 Wissota Lodge & Conference Center Gift Card</td>
                               </tr>
                               <tr>
                                 <th>350</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Mike Walker</td>
+                                <td>800</td>
+                                <td>0.582</td>
+                                <td>Walleye</td>
                                 <td>Half Day Guided Fishing Trip w/ Big Fish Encounters</td>
                               </tr>
                               <tr>
                                 <th>360</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Darwin Summer</td>
+                                <td>2209</td>
+                                <td>0.566</td>
+                                <td>Crappie</td>
                                 <td>Eskimo 32 inch Rod Locker + Scheels Ultra Light Reel</td>
                               </tr>
                               <tr>
                                 <th>370</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Frank Oboyant</td>
+                                <td>2182</td>
+                                <td>0.551</td>
+                                <td>Crappie</td>
                                 <td>$100 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>380</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Kelsey Schwerdtfeger</td>
+                                <td>137</td>
+                                <td>0.537</td>
+                                <td>Walleye</td>
                                 <td>Eskimo Pistol Bit 8 inch Auger</td>
                               </tr>
                               <tr>
                                 <th>390</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Cory Sigeurs</td>
+                                <td>224</td>
+                                <td>0.529</td>
+                                <td>Crappie</td>
                                 <td>$100 The Edge Pub & Eatery Gift Card</td>
                               </tr>
                               <tr>
