--- a/prizes.html
+++ b/prizes.html
@@ -393,82 +393,82 @@
                               </tr>
                               <tr>
                                 <th>100</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Nic Kellan</td>
+                                <td>257</td>
+                                <td>1.505</td>
+                                <td>Crappie</td>
                                 <td>Eskimo Quickfish 2 Insulated</td>
                               </tr>
                               <tr>
                                 <th>110</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Corey Brown</td>
+                                <td>787</td>
+                                <td>1.300</td>
+                                <td>Crappie</td>
                                 <td>Eskimo 32 Inch Rod Locker + Scheels Ultra Light Reel</td>
                               </tr>
                               <tr>
                                 <th>120</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Cory Cowell</td>
+                                <td>1326</td>
+                                <td>1.199</td>
+                                <td>Crappie</td>
                                 <td>$100 The Edge Pub & Eatery Gift Card</td>
                               </tr>
                               <tr>
                                 <th>130</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>James Boehm</td>
+                                <td>1264</td>
+                                <td>1.112</td>
+                                <td>Crappie</td>
                                 <td>$100 The View Gift Card</td>
                               </tr>
                               <tr>
                                 <th>140</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Andrew Sturz</td>
+                                <td>160</td>
+                                <td>1.018</td>
+                                <td>Crappie</td>
                                 <td>FLOE Cargo Max XRT 8-57 Trailer</td>
                               </tr>
                               <tr>
                                 <th>150</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Dan Guntner</td>
+                                <td>1300</td>
+                                <td>0.960</td>
+                                <td>Crappie</td>
                                 <td>Barronett Radar Backwoods Hunting Blind</td>
                               </tr>
                               <tr>
                                 <th>160</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Chad Edwards</td>
+                                <td>2199</td>
+                                <td>0.930</td>
+                                <td>Walleye</td>
                                 <td>Angler Outdoor Fish Game Cleaning Table</td>
                               </tr>
                               <tr>
                                 <th>170</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Josh Hoppe</td>
+                                <td>180</td>
+                                <td>0.878</td>
+                                <td>Yellow Perch</td>
                                 <td>$100 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>180</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Tyler Christenson</td>
+                                <td>2197</td>
+                                <td>0.854</td>
+                                <td>Walleye</td>
                                 <td>Eskimo QuickFish 2 Insulated</td>
                               </tr>
                               <tr>
                                 <th>190</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Matt Appel</td>
+                                <td>335</td>
+                                <td>0.829</td>
+                                <td>Crappie</td>
                                 <td>$100 Sand Bar Gift Card</td>
                               </tr>
                               <tr>
