--- a/prizes.html
+++ b/prizes.html
@@ -329,66 +329,66 @@
                               </tr>
                               <tr>
                                 <th>20</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Joe Makovsky</td>
+                                <td>1167</td>
+                                <td>4.202</td>
+                                <td>Northern</td>
                                 <td>$100 The View Gift Card</td>
                               </tr>
                               <tr>
                                 <th>30</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Danya Koteck</td>
+                                <td>2373</td>
+                                <td>3.394</td>
+                                <td>Walleye</td>
                                 <td>$100 Sand Bar Gift Card </td>
                               </tr>
                               <tr>
                                 <th>40</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Matt Crosby</td>
+                                <td>1112</td>
+                                <td>3.064</td>
+                                <td>Walleye</td>
                                 <td>River's Edge Big Foot Traveler Hang-On Stand</td>
                               </tr>
                               <tr>
                                 <th>50</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Eric Kron</td>
+                                <td>1374</td>
+                                <td>2.686</td>
+                                <td>Northern</td>
                                 <td>*$500 Cash</td>
                               </tr>
                               <tr>
                                 <th>60</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Gage Burish</td>
+                                <td>2232</td>
+                                <td>2.440</td>
+                                <td>Walleye</td>
                                 <td>$100 Mega/Holiday Gift Card</td>
                               </tr>
                               <tr>
                                 <th>70</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Fred Lane</td>
+                                <td>2212</td>
+                                <td>2.183</td>
+                                <td>Walleye</td>
                                 <td>$100 Wissota Lodge & Conference Center Gift Card</td>
                               </tr>
                               <tr>
                                 <th>80</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Brandon Redfern</td>
+                                <td>1492</td>
+                                <td>2.013</td>
+                                <td>Northern</td>
                                 <td>Vortex Diamondback 10x28 Binocular</td>
                               </tr>
                               <tr>
                                 <th>90</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Kurt Leffring</td>
+                                <td>55</td>
+                                <td>1.735</td>
+                                <td>Northern</td>
                                 <td>Barronett 360 Deluxe Hunting Chair</td>
                               </tr>
                               <tr>
